tests/errors/papercut-cell-as-group.futil
import "primitives/std.lib";

component main() -> () {
  cells {
    save = prim std_reg(32);
  }
  wires {}
  control {
    save;
  }
}
