tests/errors/papercut-cell-as-group.expect
---CODE---
1
---STDERR---
Error: 
9 |    save;
  |    ^^^^ Use of undefined group: save
